// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EiraHeroPanel > matches the snapshot for the populated baseline at 1920x1080 1`] = `
<DocumentFragment>
  <div
    style="width: 1920px; height: 1080px;"
  >
    <aside
      data-testid="encounter-eira-hero-panel"
      style="height: 100%; min-height: 0px; display: flex; flex-direction: column; gap: 12px; padding: 16px; border-radius: 12px; border: 1px solid var(--border-subtle); background: linear-gradient(180deg, var(--bg-deep), var(--bg-surface)); overflow-y: auto;"
    >
      <header
        style="display: flex; align-items: center; justify-content: space-between; gap: 8px;"
      >
        <span
          style="color: var(--accent-gold); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.15em;"
        >
          The Protagonist
        </span>
      </header>
      <div
        style="display: grid; place-items: center;"
      >
        <div
          aria-hidden="true"
          style="width: 212px; height: 236px; border-radius: 8px; border: 1px solid var(--border-subtle); display: grid; place-items: center; background: radial-gradient(circle at 35% 20%, color-mix(in srgb, var(--accent-gold) 20%, transparent), transparent 35%), linear-gradient(180deg, var(--bg-raised), var(--bg-deep)); color: var(--text-muted); font-family: var(--font-display); letter-spacing: 0.12em; font-size: var(--text-sm);"
        >
          EO
        </div>
      </div>
      <div>
        <h2
          style="margin: 0px; color: var(--text-primary); font-family: var(--font-display); font-size: var(--text-xl);"
        >
          Eira of Bren
        </h2>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-top: 2px;"
        >
          IRON - DRAWN BOND - 28 WINTERS
        </div>
        <div
          style="color: var(--text-secondary); font-size: var(--text-xs); font-style: italic; margin-top: 4px;"
        >
          steady, but reading the room
        </div>
      </div>
      <section>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
        >
          Capability In This Scene
        </div>
        <div
          style="display: grid; gap: 6px;"
        >
          <div
            data-testid="capability-strip"
            style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
          >
            <div
              style="color: var(--sphere-force-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
            >
              IRON
            </div>
            <div
              style="display: flex; gap: 4px;"
            >
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
            >
              a steady arm in a tight queue
            </div>
          </div>
          <div
            data-testid="capability-strip"
            style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
          >
            <div
              style="color: var(--sphere-mind-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
            >
              EYE
            </div>
            <div
              style="display: flex; gap: 4px;"
            >
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
            >
              she misses little
            </div>
          </div>
          <div
            data-testid="capability-strip"
            style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
          >
            <div
              style="color: var(--sphere-spirit-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
            >
              HEART
            </div>
            <div
              style="display: flex; gap: 4px;"
            >
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
            >
              her deepest thread
            </div>
          </div>
        </div>
      </section>
      <section>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
        >
          She Carries Into This Scene
        </div>
        <div
          style="display: grid; gap: 8px;"
        >
          <article
            style="border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); padding: 8px 10px;"
          >
            <div
              style="color: var(--text-primary); font-size: var(--text-sm);"
            >
              Captain's token
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs);"
            >
              small favor - civic guard remembers her
            </div>
          </article>
          <article
            style="border-radius: 10px; border: 1px solid var(--sphere-spirit); background: linear-gradient(90deg, color-mix(in srgb, var(--sphere-spirit-bright) 18%, transparent), transparent); padding: 8px 10px;"
          >
            <div
              style="color: var(--sphere-spirit-bright); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.1em;"
            >
              Vow - Active Now
            </div>
            <div
              style="color: var(--text-primary); font-size: var(--text-sm);"
            >
              Vow to the small folk
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic;"
            >
              she will not crush a frightened man
            </div>
          </article>
        </div>
      </section>
      <section>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
        >
          Recent Moments
        </div>
        <div
          style="display: grid; gap: 6px;"
        >
          <article
            style="border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); padding: 8px 10px;"
          >
            <div
              style="color: var(--text-primary); font-size: var(--text-sm);"
            >
              Iron market in winter
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs);"
            >
              Veiren tested her patience in the open queue.
            </div>
          </article>
        </div>
      </section>
    </aside>
  </div>
</DocumentFragment>
`;

exports[`EiraHeroPanel > matches the snapshot when no portrait is provided (initials fallback) 1`] = `
<DocumentFragment>
  <div
    style="width: 1920px; height: 1080px;"
  >
    <aside
      data-testid="encounter-eira-hero-panel"
      style="height: 100%; min-height: 0px; display: flex; flex-direction: column; gap: 12px; padding: 16px; border-radius: 12px; border: 1px solid var(--border-subtle); background: linear-gradient(180deg, var(--bg-deep), var(--bg-surface)); overflow-y: auto;"
    >
      <header
        style="display: flex; align-items: center; justify-content: space-between; gap: 8px;"
      >
        <span
          style="color: var(--accent-gold); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.15em;"
        >
          The Protagonist
        </span>
      </header>
      <div
        style="display: grid; place-items: center;"
      >
        <div
          aria-hidden="true"
          style="width: 212px; height: 236px; border-radius: 8px; border: 1px solid var(--border-subtle); display: grid; place-items: center; background: radial-gradient(circle at 35% 20%, color-mix(in srgb, var(--accent-gold) 20%, transparent), transparent 35%), linear-gradient(180deg, var(--bg-raised), var(--bg-deep)); color: var(--text-muted); font-family: var(--font-display); letter-spacing: 0.12em; font-size: var(--text-sm);"
        >
          EO
        </div>
      </div>
      <div>
        <h2
          style="margin: 0px; color: var(--text-primary); font-family: var(--font-display); font-size: var(--text-xl);"
        >
          Eira of Bren
        </h2>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-top: 2px;"
        >
          IRON - DRAWN BOND - 28 WINTERS
        </div>
        <div
          style="color: var(--text-secondary); font-size: var(--text-xs); font-style: italic; margin-top: 4px;"
        >
          steady, but reading the room
        </div>
      </div>
      <section>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
        >
          Capability In This Scene
        </div>
        <div
          style="display: grid; gap: 6px;"
        >
          <div
            data-testid="capability-strip"
            style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
          >
            <div
              style="color: var(--sphere-force-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
            >
              IRON
            </div>
            <div
              style="display: flex; gap: 4px;"
            >
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
            >
              a steady arm in a tight queue
            </div>
          </div>
          <div
            data-testid="capability-strip"
            style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
          >
            <div
              style="color: var(--sphere-mind-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
            >
              EYE
            </div>
            <div
              style="display: flex; gap: 4px;"
            >
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
            >
              she misses little
            </div>
          </div>
          <div
            data-testid="capability-strip"
            style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
          >
            <div
              style="color: var(--sphere-spirit-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
            >
              HEART
            </div>
            <div
              style="display: flex; gap: 4px;"
            >
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
            >
              her deepest thread
            </div>
          </div>
        </div>
      </section>
      <section>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
        >
          She Carries Into This Scene
        </div>
        <div
          style="display: grid; gap: 8px;"
        >
          <article
            style="border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); padding: 8px 10px;"
          >
            <div
              style="color: var(--text-primary); font-size: var(--text-sm);"
            >
              Captain's token
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs);"
            >
              small favor - civic guard remembers her
            </div>
          </article>
          <article
            style="border-radius: 10px; border: 1px solid var(--sphere-spirit); background: linear-gradient(90deg, color-mix(in srgb, var(--sphere-spirit-bright) 18%, transparent), transparent); padding: 8px 10px;"
          >
            <div
              style="color: var(--sphere-spirit-bright); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.1em;"
            >
              Vow - Active Now
            </div>
            <div
              style="color: var(--text-primary); font-size: var(--text-sm);"
            >
              Vow to the small folk
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic;"
            >
              she will not crush a frightened man
            </div>
          </article>
        </div>
      </section>
      <section>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
        >
          Recent Moments
        </div>
        <div
          style="display: grid; gap: 6px;"
        >
          <article
            style="border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); padding: 8px 10px;"
          >
            <div
              style="color: var(--text-primary); font-size: var(--text-sm);"
            >
              Iron market in winter
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs);"
            >
              Veiren tested her patience in the open queue.
            </div>
          </article>
        </div>
      </section>
    </aside>
  </div>
</DocumentFragment>
`;

exports[`EiraHeroPanel > matches the snapshot with a real portrait URL 1`] = `
<DocumentFragment>
  <div
    style="width: 1920px; height: 1080px;"
  >
    <aside
      data-testid="encounter-eira-hero-panel"
      style="height: 100%; min-height: 0px; display: flex; flex-direction: column; gap: 12px; padding: 16px; border-radius: 12px; border: 1px solid var(--border-subtle); background: linear-gradient(180deg, var(--bg-deep), var(--bg-surface)); overflow-y: auto;"
    >
      <header
        style="display: flex; align-items: center; justify-content: space-between; gap: 8px;"
      >
        <span
          style="color: var(--accent-gold); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.15em;"
        >
          The Protagonist
        </span>
      </header>
      <div
        style="display: grid; place-items: center;"
      >
        <img
          alt="Eira portrait"
          src="/portraits/eira.png"
          style="width: 212px; height: 236px; border-radius: 8px; border: 1px solid var(--border-subtle); object-fit: cover; background: var(--bg-raised);"
        />
      </div>
      <div>
        <h2
          style="margin: 0px; color: var(--text-primary); font-family: var(--font-display); font-size: var(--text-xl);"
        >
          Eira of Bren
        </h2>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-top: 2px;"
        >
          IRON - DRAWN BOND - 28 WINTERS
        </div>
        <div
          style="color: var(--text-secondary); font-size: var(--text-xs); font-style: italic; margin-top: 4px;"
        >
          steady, but reading the room
        </div>
      </div>
      <section>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
        >
          Capability In This Scene
        </div>
        <div
          style="display: grid; gap: 6px;"
        >
          <div
            data-testid="capability-strip"
            style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
          >
            <div
              style="color: var(--sphere-force-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
            >
              IRON
            </div>
            <div
              style="display: flex; gap: 4px;"
            >
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
            >
              a steady arm in a tight queue
            </div>
          </div>
          <div
            data-testid="capability-strip"
            style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
          >
            <div
              style="color: var(--sphere-mind-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
            >
              EYE
            </div>
            <div
              style="display: flex; gap: 4px;"
            >
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
            >
              she misses little
            </div>
          </div>
          <div
            data-testid="capability-strip"
            style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
          >
            <div
              style="color: var(--sphere-spirit-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
            >
              HEART
            </div>
            <div
              style="display: flex; gap: 4px;"
            >
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
            >
              her deepest thread
            </div>
          </div>
        </div>
      </section>
      <section>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
        >
          She Carries Into This Scene
        </div>
        <div
          style="display: grid; gap: 8px;"
        >
          <article
            style="border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); padding: 8px 10px;"
          >
            <div
              style="color: var(--text-primary); font-size: var(--text-sm);"
            >
              Captain's token
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs);"
            >
              small favor - civic guard remembers her
            </div>
          </article>
          <article
            style="border-radius: 10px; border: 1px solid var(--sphere-spirit); background: linear-gradient(90deg, color-mix(in srgb, var(--sphere-spirit-bright) 18%, transparent), transparent); padding: 8px 10px;"
          >
            <div
              style="color: var(--sphere-spirit-bright); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.1em;"
            >
              Vow - Active Now
            </div>
            <div
              style="color: var(--text-primary); font-size: var(--text-sm);"
            >
              Vow to the small folk
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic;"
            >
              she will not crush a frightened man
            </div>
          </article>
        </div>
      </section>
      <section>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
        >
          Recent Moments
        </div>
        <div
          style="display: grid; gap: 6px;"
        >
          <article
            style="border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); padding: 8px 10px;"
          >
            <div
              style="color: var(--text-primary); font-size: var(--text-sm);"
            >
              Iron market in winter
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs);"
            >
              Veiren tested her patience in the open queue.
            </div>
          </article>
        </div>
      </section>
    </aside>
  </div>
</DocumentFragment>
`;

exports[`EiraHeroPanel > matches the snapshot with empty items and recent moments 1`] = `
<DocumentFragment>
  <div
    style="width: 1920px; height: 1080px;"
  >
    <aside
      data-testid="encounter-eira-hero-panel"
      style="height: 100%; min-height: 0px; display: flex; flex-direction: column; gap: 12px; padding: 16px; border-radius: 12px; border: 1px solid var(--border-subtle); background: linear-gradient(180deg, var(--bg-deep), var(--bg-surface)); overflow-y: auto;"
    >
      <header
        style="display: flex; align-items: center; justify-content: space-between; gap: 8px;"
      >
        <span
          style="color: var(--accent-gold); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.15em;"
        >
          The Protagonist
        </span>
      </header>
      <div
        style="display: grid; place-items: center;"
      >
        <div
          aria-hidden="true"
          style="width: 212px; height: 236px; border-radius: 8px; border: 1px solid var(--border-subtle); display: grid; place-items: center; background: radial-gradient(circle at 35% 20%, color-mix(in srgb, var(--accent-gold) 20%, transparent), transparent 35%), linear-gradient(180deg, var(--bg-raised), var(--bg-deep)); color: var(--text-muted); font-family: var(--font-display); letter-spacing: 0.12em; font-size: var(--text-sm);"
        >
          EO
        </div>
      </div>
      <div>
        <h2
          style="margin: 0px; color: var(--text-primary); font-family: var(--font-display); font-size: var(--text-xl);"
        >
          Eira of Bren
        </h2>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-top: 2px;"
        >
          IRON - DRAWN BOND - 28 WINTERS
        </div>
        <div
          style="color: var(--text-secondary); font-size: var(--text-xs); font-style: italic; margin-top: 4px;"
        >
          steady, but reading the room
        </div>
      </div>
      <section>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
        >
          Capability In This Scene
        </div>
        <div
          style="display: grid; gap: 6px;"
        >
          <div
            data-testid="capability-strip"
            style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
          >
            <div
              style="color: var(--sphere-force-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
            >
              IRON
            </div>
            <div
              style="display: flex; gap: 4px;"
            >
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
            >
              a steady arm in a tight queue
            </div>
          </div>
          <div
            data-testid="capability-strip"
            style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
          >
            <div
              style="color: var(--sphere-mind-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
            >
              EYE
            </div>
            <div
              style="display: flex; gap: 4px;"
            >
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
            >
              she misses little
            </div>
          </div>
          <div
            data-testid="capability-strip"
            style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
          >
            <div
              style="color: var(--sphere-spirit-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
            >
              HEART
            </div>
            <div
              style="display: flex; gap: 4px;"
            >
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
            >
              her deepest thread
            </div>
          </div>
        </div>
      </section>
      <section>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
        >
          She Carries Into This Scene
        </div>
        <div
          style="display: grid; gap: 8px;"
        />
      </section>
      <section>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
        >
          Recent Moments
        </div>
        <div
          style="display: grid; gap: 6px;"
        />
      </section>
    </aside>
  </div>
</DocumentFragment>
`;

exports[`EiraHeroPanel > matches the snapshot with no active vow 1`] = `
<DocumentFragment>
  <div
    style="width: 1920px; height: 1080px;"
  >
    <aside
      data-testid="encounter-eira-hero-panel"
      style="height: 100%; min-height: 0px; display: flex; flex-direction: column; gap: 12px; padding: 16px; border-radius: 12px; border: 1px solid var(--border-subtle); background: linear-gradient(180deg, var(--bg-deep), var(--bg-surface)); overflow-y: auto;"
    >
      <header
        style="display: flex; align-items: center; justify-content: space-between; gap: 8px;"
      >
        <span
          style="color: var(--accent-gold); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.15em;"
        >
          The Protagonist
        </span>
      </header>
      <div
        style="display: grid; place-items: center;"
      >
        <div
          aria-hidden="true"
          style="width: 212px; height: 236px; border-radius: 8px; border: 1px solid var(--border-subtle); display: grid; place-items: center; background: radial-gradient(circle at 35% 20%, color-mix(in srgb, var(--accent-gold) 20%, transparent), transparent 35%), linear-gradient(180deg, var(--bg-raised), var(--bg-deep)); color: var(--text-muted); font-family: var(--font-display); letter-spacing: 0.12em; font-size: var(--text-sm);"
        >
          EO
        </div>
      </div>
      <div>
        <h2
          style="margin: 0px; color: var(--text-primary); font-family: var(--font-display); font-size: var(--text-xl);"
        >
          Eira of Bren
        </h2>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-top: 2px;"
        >
          IRON - DRAWN BOND - 28 WINTERS
        </div>
        <div
          style="color: var(--text-secondary); font-size: var(--text-xs); font-style: italic; margin-top: 4px;"
        >
          steady, but reading the room
        </div>
      </div>
      <section>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
        >
          Capability In This Scene
        </div>
        <div
          style="display: grid; gap: 6px;"
        >
          <div
            data-testid="capability-strip"
            style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
          >
            <div
              style="color: var(--sphere-force-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
            >
              IRON
            </div>
            <div
              style="display: flex; gap: 4px;"
            >
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
            >
              a steady arm in a tight queue
            </div>
          </div>
          <div
            data-testid="capability-strip"
            style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
          >
            <div
              style="color: var(--sphere-mind-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
            >
              EYE
            </div>
            <div
              style="display: flex; gap: 4px;"
            >
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
              />
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
            >
              she misses little
            </div>
          </div>
          <div
            data-testid="capability-strip"
            style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
          >
            <div
              style="color: var(--sphere-spirit-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
            >
              HEART
            </div>
            <div
              style="display: flex; gap: 4px;"
            >
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
              <span
                aria-hidden="true"
                style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
              />
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
            >
              her deepest thread
            </div>
          </div>
        </div>
      </section>
      <section>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
        >
          She Carries Into This Scene
        </div>
        <div
          style="display: grid; gap: 8px;"
        >
          <article
            style="border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); padding: 8px 10px;"
          >
            <div
              style="color: var(--text-primary); font-size: var(--text-sm);"
            >
              Captain's token
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs);"
            >
              small favor - civic guard remembers her
            </div>
          </article>
        </div>
      </section>
      <section>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
        >
          Recent Moments
        </div>
        <div
          style="display: grid; gap: 6px;"
        >
          <article
            style="border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); padding: 8px 10px;"
          >
            <div
              style="color: var(--text-primary); font-size: var(--text-sm);"
            >
              Iron market in winter
            </div>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs);"
            >
              Veiren tested her patience in the open queue.
            </div>
          </article>
        </div>
      </section>
    </aside>
  </div>
</DocumentFragment>
`;
